api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_by_source_ids____test_context_wrapped_asc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_by_source_ids.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
INNER JOIN
  "media_sources" ON "media_sources"."medium_id" = "media"."id"
WHERE
  "source_id" IN ($1, $2, $3)
GROUP BY
  "id"
ORDER BY
  "media"."created_at" ASC,
  "media"."id" ASC
LIMIT
  $4'''
rows_affected = 3
rows_returned = 3
